# tensorpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SUMMARY.md  problems.md  travisrunner.sh
cmake/: CXXSTD.cmake  FindMKL.cmake  FindOpenBLAS.cmake
include/tensorpp/: config.hpp.in  tensorpp.hpp
include/tensorpp/utils/: logger.hpp  meta.hpp  meta_structs.hpp
programming-models/: kernel-design.md
src/: tensor++
src/tensor++/: config.hpp.in  tensor++.hpp
src/tensor++/version/: version.hpp
src/tensorpp/: config.hpp.in  tensorpp.hpp  tensorpp_internal.hpp
src/tensorpp/utils/: logger.cpp  logger.hpp  meta.cpp  meta.hpp  meta_structs.hpp
src/tensorpp/version/: meta_structs.hpp  version.hpp
src/utils/: meta.cpp
tests/: CMakeLists.txt
tests/blas/: blas_1.cpp  blas_level_1.cpp
tests/utils/: meta_check.cpp
tests/version/: version_check.cpp
